syntax = "proto3";
package tws.proto.resource.scheduler;

option java_package = "edu.iu.dsc.tws.proto.system";
option java_outer_classname = "ResourceAPI";

//import "common.proto";

message property {
  string key = 1;
  string value = 2;
}

message ComputeResource {
  double availableCPU = 1;
  double availableMemory = 2;
  double availableDisk = 3;
  // the properties such as available ports
  repeated property properties = 4;
}

// in case of a schduler running as a process
// this will be saved to the state manager
message SchedulerLocation {
  string job_name = 1;
  string http_endpoint = 2;
  repeated string job_page_link = 3;
}

message KillJobRequest {
  string job_name = 1;
}

//message SchedulerResponse {
//  required tws.proto.common.Status status = 1;
//}